/div4/div4b/WidgetBender Got ModuleInput working, and WidgetInput half-working

--- a/WidgetBender.css
+++ b/WidgetBender.css
@@ -15,4 +15,11 @@
  display: table-cell;
  border-collapse: collapse;
  border: 2px solid #bfbfff;
+ padding: 5pt;
+ vertical-align: top;
+}
+
+.WidgetBender-Widgets-WidgetEditor-WidgetEditor-WidgetInfoPanel-WidgetGroup-Widget > .field,
+.WidgetBender-Widgets-WidgetEditor-WidgetEditor-WidgetInfoPanel-WidgetGroup-Location > .field {
+ font-size: 8pt;
 }
